--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://carreivan.github.io/nombre-del-repositorio",
+  "homepage": "https://carreivan.github.io/miniProyectoFunval",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
